mdt_cli/tests/snapshots/snapshots__formatter_check_json_reports_stale_files.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpngrbXA
    - check
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
{"diagnostics":[],"errors":[],"ok":false,"orphans":[],"stale":[],"stale_files":[{"file":"readme.md"}]}

----- stderr -----
