mdt_cli/tests/snapshots/snapshots__formatter_update_normalize_only.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpEpWYg4
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Normalized 1 file(s) via formatter integration.

----- stderr -----
