mdt_cli/tests/snapshots/snapshots__info_empty_project.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpR1kn6R
    - info
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
mdt info

Project
Project root                 [TEMP_DIR]
Resolved config              none

Blocks
Providers                    0
Consumers                    0
Orphan consumers             0
Unused providers             0

Data
Namespaces                   0
Source files                 none

Templates
Template files               0
Configured dirs              default scan (*.t.md)
Canonical hints              .templates/, docs/templates/, shared/templates/, templates/
Discovered files             none

Diagnostics
Total                        0
Errors                       0
Warnings                     0
Missing providers            0
Missing names                none

Cache
Artifact path                [TEMP_DIR]/.mdt/cache/index-v2.json
Artifact status              ok
Schema version               3 (supported)
Project key match            yes
Hash verification            disabled
Scans recorded               1
Full project hits            0 (0.0%)
File reuse totals            0 reused / 0 reparsed (n/a)
Last scan mode               incremental reuse
Last scan files              0 reused / 0 reparsed / 0 total
Last scan unix ms            [UNIX_MS]

----- stderr -----
