mdt_cli/tests/snapshots/snapshots__info_empty_project_json.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp6lHhzm
    - info
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "project": {
    "root": "[TEMP_DIR]",
    "resolved_config": "none"
  },
  "blocks": {
    "providers": 0,
    "consumers": 0,
    "orphan_consumers": 0,
    "unused_providers": 0
  },
  "data": {
    "namespace_count": 0,
    "namespaces": []
  },
  "templates": {
    "file_count": 0,
    "configured_dirs": [],
    "canonical_hints": [
      ".templates/",
      "docs/templates/",
      "shared/templates/",
      "templates/"
    ],
    "discovered_files": []
  },
  "diagnostics": {
    "total": 0,
    "errors": 0,
    "warnings": 0,
    "missing_provider_count": 0,
    "missing_provider_names": []
  },
  "cache": {
    "path": "[TEMP_DIR]/.mdt/cache/index-v2.json",
    "exists": true,
    "readable": true,
    "valid": true,
    "schema_version": 3,
    "schema_supported": true,
    "project_key_matches": true,
    "hash_verification_enabled": false,
    "scan_count": 1,
    "full_project_hit_count": 0,
    "full_project_hit_rate": "0.0%",
    "reused_file_count_total": 0,
    "reparsed_file_count_total": 0,
    "file_reuse_rate": "n/a",
    "last_scan": {
      "timestamp_unix_ms": [UNIX_MS],
      "full_project_hit": false,
      "reused_files": 0,
      "reparsed_files": 0,
      "total_files": 0
    }
  }
}

----- stderr -----
