mdt_cli/tests/snapshots/snapshots__info_project.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpDF4Bm4
    - info
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
mdt info

Project
Project root                 [TEMP_DIR]
Resolved config              [TEMP_DIR]/mdt.toml

Blocks
Providers                    2
Consumers                    2
Orphan consumers             1
Unused providers             1

Data
Namespaces                   2
source                       meta [file] -> meta.toml
source                       pkg [file] -> package.json

Templates
Template files               2
Configured dirs              shared/templates, templates
Canonical hints              .templates/, docs/templates/, shared/templates/, templates/
template file                templates/extra.t.md
template file                templates/main.t.md

Diagnostics
Total                        1
Errors                       0
Warnings                     1
Missing providers            1
Missing names                missing_block

Cache
Artifact path                [TEMP_DIR]/.mdt/cache/index-v2.json
Artifact status              ok
Schema version               3 (supported)
Project key match            yes
Hash verification            disabled
Scans recorded               1
Full project hits            0 (0.0%)
File reuse totals            0 reused / 3 reparsed (0.0%)
Last scan mode               incremental reuse
Last scan files              0 reused / 3 reparsed / 3 total
Last scan unix ms            [UNIX_MS]

----- stderr -----
