mdt_cli/tests/snapshots/snapshots__info_project_json.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpCY4JEl
    - info
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "project": {
    "root": "[TEMP_DIR]",
    "resolved_config": "[TEMP_DIR]/mdt.toml"
  },
  "blocks": {
    "providers": 2,
    "consumers": 2,
    "orphan_consumers": 1,
    "unused_providers": 1
  },
  "data": {
    "namespace_count": 2,
    "namespaces": [
      {
        "namespace": "meta",
        "location": "meta.toml",
        "kind": "file",
        "format": "toml",
        "explicit_format": false
      },
      {
        "namespace": "pkg",
        "location": "package.json",
        "kind": "file",
        "format": "json",
        "explicit_format": false
      }
    ]
  },
  "templates": {
    "file_count": 2,
    "configured_dirs": [
      "shared/templates",
      "templates"
    ],
    "canonical_hints": [
      ".templates/",
      "docs/templates/",
      "shared/templates/",
      "templates/"
    ],
    "discovered_files": [
      "templates/extra.t.md",
      "templates/main.t.md"
    ]
  },
  "diagnostics": {
    "total": 1,
    "errors": 0,
    "warnings": 1,
    "missing_provider_count": 1,
    "missing_provider_names": [
      "missing_block"
    ]
  },
  "cache": {
    "path": "[TEMP_DIR]/.mdt/cache/index-v2.json",
    "exists": true,
    "readable": true,
    "valid": true,
    "schema_version": 3,
    "schema_supported": true,
    "project_key_matches": true,
    "hash_verification_enabled": false,
    "scan_count": 1,
    "full_project_hit_count": 0,
    "full_project_hit_rate": "0.0%",
    "reused_file_count_total": 0,
    "reparsed_file_count_total": 3,
    "file_reuse_rate": "0.0%",
    "last_scan": {
      "timestamp_unix_ms": [UNIX_MS],
      "full_project_hit": false,
      "reused_files": 0,
      "reparsed_files": 3,
      "total_files": 3
    }
  }
}

----- stderr -----
